style(link): improve the code style (#69)